// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

// buf breaking: ignore (does currently not require backward-compatibility)

syntax = "proto3";

package mz_compute_types.plan.threshold;

import "expr/src/scalar.proto";

message ProtoThresholdPlan {
  reserved 2; // retractions
  oneof kind {
    ProtoArrangement basic = 1;
  }
}

message ProtoArrangement {
  repeated mz_expr.scalar.ProtoMirScalarExpr all_columns = 1;
  repeated uint64 permutation = 2;
  repeated uint64 thinning = 3;
}
